[workspace]
resolver = "2"
members = [
    "core",
    "builders",
    "runtime",
    "cli"
]

[workspace.package]
version = "1.0.0-alpha7"
description = "Rust SDK for the Serverless Workflow DSL specification v1.0.0"
authors = ["The Serverless Workflow Authors <cncf.serverless.workflow@gmail.com>"]
license = "Apache-2.0"
homepage = "https://serverlessworkflow.io"
repository = "https://github.com/ejfkdev/ServerlessWorkflow-rs"
edition = "2021"
rust-version = "1.80"
readme = "README.md"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
