[package]
name = "swf-cli"
description = "CLI tool for executing Serverless Workflow definitions"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["serverless", "workflow", "cli", "cncf", "dsl"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://docs.rs/swf-cli"

[[bin]]
name = "swf"
path = "src/main.rs"

[dependencies]
swf-runtime = { path = "../runtime", version = "1.0.0-alpha7" }
swf-core = { path = "../core", version = "1.0.0-alpha7" }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package.metadata.dist]
dist = true
