[package]
name = "serverless_workflow_core"
description = "Serverless Workflow DSL models — data structures, serialization, and validation"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/serverless_workflow_core"
edition.workspace = true
rust-version.workspace = true
keywords = ["serverless-workflow", "sdk", "core"]
categories = ["config", "parsing", "data-structures"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"

[dev-dependencies]
serde_yaml = "0.9"
